# systematics-v0.5

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  Shuttle.toml  fly.toml  run.sh  setup.sh
.github/: AGENTS.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  epic.md  feature.md  task.md
.github/workflows/: ci.yml  deploy.yml
backend/: AGENTS.md  Cargo.toml  README.md  Shuttle.toml
backend/src/: lib.rs  main.rs
backend/src/core/: entries.rs  graph.rs  language.rs  links.rs  mod.rs
backend/src/data/: mod.rs
backend/src/graphql/: mod.rs  types.rs
docs/: AGENTS.md  HANDOFF.md  README.md
docs/archive/: API_GEOMETRY_GUIDE.md  API_INTEGRATION.md  ARCHITECTURE.md  BUILD_FIX.md  CATEGORIFICATION_HANDOFF.md  COORDINATE_TRANSFORMATION.md  CORE_FRAMEWORK_SUMMARY.md  DATA_FLOW.md  ENABLE_GRAPHQL.md  FRONTEND_MIGRATION_GUIDE.md  GRAPHQL_INTEGRATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_FIX_GUIDE.md  README.md  SCALING_FIX.md  SCALING_ISSUE_RESOLVED.md  TESTING.md
frontend/: AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html
frontend/src/: app.rs  lib.rs
frontend/src/api/: client.rs
frontend/src/components/: graph_view.rs  mod.rs  system_selector.rs
frontend/styles/: style.css
images/: README.md
middleware/: AGENTS.md  Cargo.toml  README.md
middleware/schema/: schema.graphql
middleware/src/: lib.rs
middleware/src/types/: entries.rs  enums.rs  error.rs  links.rs  mod.rs  system.rs
