[package]
name = "systematics-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
systematics-middleware = { path = "../middleware", features = ["server"] }
axum = "0.7"
tower = "0.4"
async-graphql = "=7.0.7"
async-graphql-axum = "=7.0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
