[package]
name = "systematics-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
systematics-middleware = { path = "../middleware", features = ["server"] }
axum = "0.8"
tower = "0.5"
async-graphql = "=7.2.1"
async-graphql-axum = "=7.2.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shuttle dependencies (optional, only for deployment)
shuttle-runtime = { version = "0.50.0", optional = true }
shuttle-axum = { version = "0.50.0", optional = true }

[features]
shuttle = ["dep:shuttle-runtime", "dep:shuttle-axum"]
