[package]
name = "systematics-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
systematics-middleware = { path = "../middleware" }
yew = { version = "0.22", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "HtmlSelectElement", "HtmlInputElement"] }
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
